k8s/serving-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fraud-api
spec:
  selector:
    app: fraud-api
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
